button: make gtk_button_get_props() return the padding too

https://bugzilla.gnome.org/show_bug.cgi?id=646882